[package]
name = "isbn2"
version = "0.4.0"
authors = ["Jihyeok Seo <limeburst@ridi.com>", "Philippe Solodov <solop1906@gmail.com>"]
description = "A library for handling ISBNs."
license = "MIT"
repository = "https://github.com/philippeitis/isbn-rs"
edition = "2021"
rust-version = "1.60.0"

[build-dependencies]
codegen = "0.2"
roxmltree = "0.20"

[dependencies]
arrayvec = { version = "0.7.1", default-features = false }
quick-xml = { version = "0.34", optional = true }
indexmap = { version = "2.2", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
runtime-ranges = ["quick-xml", "indexmap"]
serialize = ["serde"]
